# pydantic-ai-sandbox

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  integration-ollama.yml  integration-watsonx.yml  patterns-ci.yml  patterns-integration-ollama.yml  security.yml
docs/: README.md  context-engineering.md  governance-and-scale.md  learning-path.md  tool-design.md
patterns/: EVAL-GRADERS.md  README.md  SECURITY-NOTES.md  TOOL-DESIGN-NOTES.md
patterns/autonomous-agent/: README.md
patterns/contracts/: README.md  pyproject.toml
patterns/contracts/src/patterns_contracts/: __init__.py  autonomous_agent.py  deep_research.py  eval_graders.py  evaluator_optimizer.py  hitl.py  live_ollama.py  orchestrator_workers.py  parallelization.py  prompt_chaining.py  pytest_live_guard.py  rag.py  routing.py  sse.py
patterns/contracts/tests/unit/: test_contract_drift.py  test_deep_research_contracts.py  test_eval_graders.py  test_hitl_contract.py  test_pytest_live_guard.py  test_rag_contracts.py  test_sse_contracts.py
patterns/deep-research/: COMPARISON.md  README.md  pyproject.toml
patterns/deep-research/src/patterns_deep_research/: __init__.py  compression.py  notes.py  observability.py  orchestrator.py  report.py  research.py  researcher.py  search.py
patterns/deep-research/tests/fixtures/: corpus.json
patterns/deep-research/tests/integration/: test_ollama_e2e.py
patterns/deep-research/tests/support/: fake_search.py  hermetic.py  model_fakes.py
patterns/deep-research/tests/unit/: conftest.py  test_bounded_iterations.py  test_brief_and_plan.py  test_citation_mapping.py  test_eval_graders_deep_research.py  test_fanout_cap.py  test_notes.py  test_observability.py  test_report_synthesis.py  test_research.py  test_researcher.py  test_search_seam.py  test_smoke.py
patterns/evaluator-optimizer/: README.md
patterns/frameworks/beeai/: README.md  pyproject.toml
patterns/frameworks/beeai/src/patterns_beeai/: __init__.py  autonomous_agent.py  evaluator_optimizer.py  observability.py  orchestrator_workers.py  parallelization.py  prompt_chaining.py  routing.py
patterns/frameworks/beeai/tests/integration/: test_ollama_e2e.py
patterns/frameworks/beeai/tests/support/: fake_chat_model.py
patterns/frameworks/beeai/tests/unit/: test_autonomous_agent.py  test_evaluator_optimizer.py  test_observability.py  test_orchestrator_workers.py  test_parallelization.py  test_prompt_chaining.py  test_routing.py  test_smoke.py
patterns/frameworks/llamaindex/: README.md  pyproject.toml
patterns/frameworks/llamaindex/src/patterns_llamaindex/: __init__.py  autonomous_agent.py  contracts.py  evaluator_optimizer.py  observability.py  orchestrator_workers.py  parallelization.py  prompt_chaining.py  routing.py
patterns/frameworks/llamaindex/tests/integration/: test_ollama_e2e.py
patterns/frameworks/llamaindex/tests/support/: fake_llm.py
patterns/frameworks/llamaindex/tests/unit/: test_autonomous_agent.py  test_evaluator_optimizer.py  test_observability.py  test_orchestrator_workers.py  test_parallelization.py  test_prompt_chaining.py  test_routing.py  test_smoke.py
patterns/frameworks/pydantic-ai/: README.md  pyproject.toml
patterns/frameworks/pydantic-ai/src/patterns_pydantic_ai/: __init__.py  autonomous_agent.py  contracts.py  evaluator_optimizer.py  observability.py  orchestrator_workers.py  parallelization.py  prompt_chaining.py  routing.py  tool_design.py
patterns/frameworks/pydantic-ai/tests/: conftest.py
patterns/frameworks/pydantic-ai/tests/integration/: test_ollama_e2e.py
patterns/frameworks/pydantic-ai/tests/support/: model_fakes.py
patterns/frameworks/pydantic-ai/tests/unit/: test_autonomous_agent.py  test_eval_graders_autonomous_agent.py  test_eval_graders_evaluator_optimizer.py  test_evaluator_optimizer.py  test_observability.py  test_orchestrator_workers.py  test_parallelization.py  test_prompt_chaining.py  test_routing.py  test_smoke.py  test_tool_design.py
patterns/hitl/: README.md  pyproject.toml
patterns/hitl/src/patterns_hitl/: __init__.py  agent.py  app.py  audit.py  harness.py  observability.py  settings.py  store.py
patterns/hitl/tests/integration/: conftest.py  test_ollama_hitl_e2e.py
patterns/hitl/tests/support/: function_model_scripts.py  in_memory_audit.py
patterns/hitl/tests/unit/: conftest.py  test_agent_tools.py  test_api.py  test_audit_trail.py  test_consumption.py  test_egress_policy.py  test_observability.py  test_output_validator.py  test_resume_schema.py  test_session_hygiene.py  test_smoke.py  test_stop_approve_resume.py  test_store.py
patterns/orchestrator-workers/: README.md
patterns/parallelization/: README.md
patterns/prompt-chaining/: README.md
patterns/rag/: README.md  pyproject.toml
patterns/rag/src/patterns_rag/: __init__.py  chunking.py  citation.py  indexing.py  observability.py  rag.py  retrieval.py
patterns/rag/tests/fixtures/: golden_chunks.json  sample.docling.json
patterns/rag/tests/integration/: conftest.py  test_ollama_e2e.py
patterns/rag/tests/support/: fake_embedding.py  fake_llm.py
patterns/rag/tests/unit/: test_chunking_golden.py  test_citation_soundness.py  test_dangling_citation.py  test_indexing.py  test_observability.py  test_rag_answer_contract.py  test_retrieval_determinism.py  test_smoke.py
patterns/routing/: README.md
patterns/sse/: README.md  pyproject.toml  test_spike_asgi.py
patterns/sse/src/patterns_sse/: __init__.py  app.py  events.py  observability.py
patterns/sse/tests/integration/: test_ollama_e2e.py
patterns/sse/tests/support/: asgi_driver.py  scripted_source.py
patterns/sse/tests/unit/: test_disconnect_cleanup.py  test_error_termination.py  test_event_serialization.py  test_observability.py  test_smoke.py  test_stream_order.py  test_token_determinism.py
specs/001-agentic-platform/: plan.md  research.md  spec.json  spec.md  tasks.md
specs/002-watsonx-provider/: gap-analysis.md  plan.md  research.md  spec.json  spec.md  tasks.md
tests/: conftest.py
(+164 files in other folders)
