[project]
name = "pydantic-ai-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "ibm-watsonx-ai",
    "logfire[fastapi,httpx]",
    # V2 Beta is the project target; the slim[openai] extra pulls the
    # OpenAI-compatible chat client used by the Ollama provider (Plan AD-6 / research.md R-1).
    "pydantic-ai>=2.0.0b6",
    "pydantic-ai-slim[openai]>=2.0.0b6",
    "pydantic-settings",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pip-audit",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

# Hatchling is uv's recommended PEP 517 backend. Declaring it (a) flips this
# project from uv's "virtual" mode into a real package so `uv sync` performs
# the editable install on its own (CI was hitting ModuleNotFoundError without
# this — see PDCA Act 2026-05-24 / Mistake-2), and (b) lets hatchling locate
# the src-layout package without an explicit packages= override on most layouts;
# we set it anyway so wheel builds are deterministic regardless of CWD.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_sandbox"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "S",   # flake8-bandit (security: eval/exec, SQL injection, hardcoded secrets, pickle, subprocess)
    "A",   # flake8-builtins (prevent shadowing builtins)
    "SIM", # flake8-simplify
    "T20", # flake8-print (detect stray print statements)
    "D",   # pydocstyle (Google docstring format)
    "N",   # pep8-naming (CapWords classes, snake_case functions/variables)
    "C4",  # flake8-comprehensions (prefer list/dict/set comprehensions)
    "C90", # mccabe complexity
    "TCH", # flake8-type-checking (move type-only imports into TYPE_CHECKING blocks)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (acceptable in tests)
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__ (document in class docstring per Google style)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert is expected in tests
    "S105",  # hardcoded passwords acceptable in test fixtures
    "S106",
    "D",     # docstrings not required in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["pydantic_ai_sandbox"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = ".venv"
venv = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Project root on sys.path so `from tests.support.model_fakes import ...`
# resolves regardless of CWD or pytest's rootdir heuristics. Without this,
# CI's `mise run check` lane (which fans out lint/format/typecheck/test in
# parallel under mise's depends model) raced into a state where pytest's
# rootdir-based sys.path insertion picked `tests/unit/` rather than the
# project root, producing `ModuleNotFoundError: No module named 'tests'`
# on the two files that runtime-import from `tests.support`. The other
# tests survived because their `from tests.conftest import ...` lives
# inside `if TYPE_CHECKING:` and never executes at import time.
pythonpath = ["."]

[tool.coverage.run]
# Limit coverage measurement to first-party code; tests and stubs are excluded.
source = ["src/pydantic_ai_sandbox"]
branch = true

[tool.coverage.report]
# Initial floor (PDCA Act 2026-05-24): measured 98% across 50 unit tests; floor
# set to measured−5pt = 93 to absorb noise from upcoming watsonx/Anthropic/Bedrock
# stubs being replaced (Spec 002-multi-provider). Plan R-6 ratchet adds +5pt per
# Req-implementation task; raise this together with each provider-impl task.
fail_under = 93
show_missing = true
skip_covered = false
