[project]
name = "pydantic-ai-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    # ADR-1 (spec 002-watsonx-provider): 1.5.12 cannot import
    # foundation_models.ModelInference on Python 3.14.5 (StrEnum/utils.py:1191
    # TypeError); >=1.5.13 (requires_python <3.15,>=3.11) fixes the import.
    "ibm-watsonx-ai>=1.5.13",
    "logfire[fastapi,httpx]",
    # Use pydantic-ai-slim with explicit extras instead of the full `pydantic-ai`
    # meta-package, so only what the app actually uses is installed:
    #   openai  → OpenAI-compatible chat client used by the Ollama provider.
    #   logfire → instrument_pydantic_ai instrumentation (logging_setup.py).
    "pydantic-ai-slim[logfire,openai]>=2.3.0",
    "pydantic-settings",
    "uvicorn",
]

# Optional LiteLLM transport for the watsonx provider (WATSONX_TRANSPORT=litellm,
# Req 2.6 / 11.5). Kept out of the default install to minimize supply-chain
# footprint; the builder import-guards on it and SDK-only deployments never
# need it. Install via `uv sync --extra litellm`.
[project.optional-dependencies]
litellm = ["litellm"]

[dependency-groups]
dev = [
    # litellm is declared here in addition to the optional extra above: the test
    # suite must exercise the litellm path, and `uv sync` installs dev groups but
    # not extras. Without this the litellm tests fail collection.
    "litellm",
    "pip-audit",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    # PyYAML is present transitively (via pre-commit) but imported directly by the
    # CI-workflow contract test, so it is declared here for honest resolution;
    # types-pyyaml satisfies pyright strict.
    "pyyaml",
    "types-pyyaml",
    # HTTP-level mock for the litellm transport's request-path tests.
    "respx",
    "ruff",
]

# Declaring a build backend flips this project from uv's "virtual" mode into a real
# package so `uv sync` performs the editable install (CI hit ModuleNotFoundError
# without it). packages= below is set explicitly for deterministic wheel builds.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_sandbox"]

[tool.ruff]
target-version = "py313"
line-length = 100
# patterns/ lanes are independent uv projects with their own interpreters,
# dependency sets, and ruff/pyright configs (Spec 005 AD-1/AD-5). Excluding
# them here keeps `mise run check` scoped to the root app; lane gates run
# via `mise run patterns:check`.
extend-exclude = ["patterns"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except (broad excepts must carry a scoped noqa + rationale)
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "S",   # flake8-bandit (security: eval/exec, SQL injection, hardcoded secrets, pickle, subprocess)
    "A",   # flake8-builtins (prevent shadowing builtins)
    "SIM", # flake8-simplify
    "T20", # flake8-print (detect stray print statements)
    "D",   # pydocstyle (Google docstring format)
    "N",   # pep8-naming (CapWords classes, snake_case functions/variables)
    "C4",  # flake8-comprehensions (prefer list/dict/set comprehensions)
    "C90", # mccabe complexity
    "TCH", # flake8-type-checking (move type-only imports into TYPE_CHECKING blocks)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (acceptable in tests)
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__ (document in class docstring per Google style)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert is expected in tests
    "S105",  # hardcoded passwords acceptable in test fixtures
    "S106",
    "D",     # docstrings not required in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["pydantic_ai_sandbox"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = ".venv"
venv = "."
# Same rationale as [tool.ruff].extend-exclude: lane code resolves against
# lane-local venvs (beeai-framework / llama-index are not installed here).
# Specifying `exclude` replaces pyright's defaults, so they are restated.
exclude = ["patterns", "**/node_modules", "**/__pycache__", "**/.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Project root on sys.path so `from tests.support... ` resolves regardless of CWD
# or pytest's rootdir heuristics (some test files runtime-import from tests.support).
pythonpath = ["."]

[tool.coverage.run]
# Limit coverage measurement to first-party code; tests and stubs are excluded.
source = ["src/pydantic_ai_sandbox"]
branch = true
# Store relative paths in .coverage so the CI coverage-comment action (Docker,
# different workdir) can map files; absolute paths break py-cov-action.
relative_files = true

[tool.coverage.report]
# Coverage ratchet: raise this in lockstep with each provider-implementation task
# so newly added branches stay covered (plan.md §Performance Goals).
fail_under = 98
show_missing = true
skip_covered = false
